# Song_retrieval_FASTAPI

./: MICROSERVICES.md
songs-api-backend/: .gitignore  README.md  pyproject.toml  run.py
songs-api-backend/app/: __init__.py  main.py  models.py  routes.py
songs-api-backend/data/: songs.json
songs-api-backend/tests/: test_api.py
songs-api-frontend/: README.md  index.html
songs-api-frontend/css/: styles.css
songs-api-frontend/js/: api.js  ui.js
