[project]
name = "songs-api"
version = "1.0.0"
description = "A simple FastAPI backend for retrieving songs"
authors = [{name = "Learning"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
